# xontrib-jedi

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_jedi.py
xontrib/: jedi.py
