
[tool.poetry]
name = "xontrib-jedi"
version = "0.1.0"
description = "Improved Xonsh's Python completions using jedi"
authors = ["Xonsh Dev <xonsh@email.address>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/xonsh/xontrib-jedi"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


packages = [{ include = "xontrib" }]

[tool.poetry.urls]
Documentation = "https://github.com/xonsh/xontrib-jedi/blob/master/README.md"
Code = "https://github.com/xonsh/xontrib-jedi"
"Issue tracker" = "https://github.com/xonsh/xontrib-jedi/issues"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jedi = ">=0.19"
xonsh = ">=0.17"

[tool.poetry.dev-dependencies]
pytest = ">6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "B", # https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    #"D", # https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "E", # https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "F", # https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I", # https://beta.ruff.rs/docs/rules/#isort-i
    "T10", # https://beta.ruff.rs/docs/rules/#flake8-debugger-t10
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "YTT", # https://beta.ruff.rs/docs/rules/#flake8-2020-ytt
    "W", # https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "UP", # https://beta.ruff.rs/docs/rules/#pyupgrade-up
]
ignore = [
    "E501", # line length
]
